2014-06-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_compat.c: Re-worked Wand library implementation to
	depend directly on GraphicsMagick library functionality rather
	than using ImageMagick shim code from magick_compat.c and
	magick_compat.h. The magick_compat.c source module becomes "dead
	code", which remains only to support the existing ABI, and will be
	deleted at the next major ABI break point.

	* magick/utility.c (MagickFormatString): New private function to
	format a string into a buffer with a specified size.  Same as
	previously existing FormatString() except requires a length
	argument.

2014-06-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_compat.h: Use MAGICK_ATTRIBUTE definition from
	magick/common.h.

	* magick/common.h (MAGICK_ATTRIBUTE): Don't undefine __attribute__
	since this may be used by system or compiler headers.  Define
	private macro instead.  Resolves SourceForge bug #270 "Compile
	error with g++ -std=c++11".

2014-06-06  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Free png_pixels and
	quantum_scanline before error return.  Use "png_error()"
	instead of "ThrowException2()" for errors occuring while
	decoding a PNG so proper cleanup will happen.

2014-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Make sure that libtiff warnings
	are promoted to errors for critical tags.

2014-06-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Be quite a lot more draconian
	when retrieving the baseline standard TIFF tags we need in order
	to avoid consuming uninitalized data later.  An error with these
	tags will result in failure to read the image file.

2014-05-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/operator.c: Decided that ThresholdBlackNegateQuantumOp
	and ThresholdWhiteNegateQuantumOp should set the result to white