@@ -38,6 +38,9 @@
 <p>2014-06-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/composite.c (ScreenCompositePixels): Implementation of
+Screen composite contributed by Brendan Lane.  SourceForge patch
+#30 &quot;Missing Screen composite operation&quot;.</li>
 <li>wand/magick_compat.c: Re-worked Wand library implementation to
 depend directly on GraphicsMagick library functionality rather
 than using ImageMagick shim code from magick_compat.c and
